--- a/.github/workflows/eleventy.yml
+++ b/.github/workflows/eleventy.yml
@@ -8,9 +8,18 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - name: Build
-        uses: mfyz/actions-eleventy@master
+      - name: Checkout repo
+        uses: actions/checkout@v2
+      - name: Set up node
+        uses: actions/setup-node@v2
+        with:
+          node-version: '16'
+      - name: Install dependencies
+        run: yarn
+      - name: Build website
+        run: yarn build:eleventy
+      - name: Compile sass
+        run: yarn build:sass
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v1.1.0
         env:
