Added slides for syco

--- a/src/data/visits.yml
+++ b/src/data/visits.yml
@@ -1,3 +1,7 @@
+- venue: SYCO 8
+  web: https://www.cl.cam.ac.uk/events/syco/8/
+  city: Tallinn
+  dates: December 13-14, 2021
 - venue: ACT 2021
   web: https://www.cl.cam.ac.uk/events/act2021/
   city: Cambridge
