--- a/src/data/talks.yml
+++ b/src/data/talks.yml
@@ -3,6 +3,7 @@
   web: https://www.cl.cam.ac.uk/events/syco/8/
   date: December 13, 2021
   extended-abstract: 2021-12-13-syco
+  slides: 2021-12-13-syco8
   repo: https://github.com/georgejkaye/syco8
 - title: Rewriting Graphically with Cartesian Traced Categories
   venue: ACT 2021
