Added syco picture and made me pictures clickable to see original

--- a/src/data/people.yml
+++ b/src/data/people.yml
@@ -39,3 +39,7 @@ ioannis:
   name: Ioannis Markakis
   poss: "'"
   web: "https://www.cst.cam.ac.uk/people/im496"
+amar:
+  name: Amar Hadzihasanovic
+  poss: "'s"
+  web: https://ioc.ee/~amar/
