--- a/src/data/pictures.yml
+++ b/src/data/pictures.yml
@@ -1,3 +1,8 @@
+- caption: The conference photo for SYCO 8, taken on the steps of the conference venue, the Opetajata Maja (Teacher's House).
+  alt: The attendants of SYCO 8 stand on the steps in front of a pale yellow building, with a copper green canopy above them.
+  src: me/syco8.webp  
+  taken-by:
+    key: amar
 - caption: Todd and I conquer Arthur's Seat.
   alt: Todd and I stand awkwardly on the top of Arthur's Seat.
   taken-by: 
