Added github link for talks that have repos

--- a/src/data/talks.yml
+++ b/src/data/talks.yml
@@ -6,6 +6,7 @@
   links:
     slides: true
     abstract: true
+    github: true
   repo: https://github.com/georgejkaye/syco8
 - title: Rewriting Graphically with Cartesian Traced Categories
   venue: ACT 2021
