--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "dependencies": {
+    "@11ty/eleventy": "^1.0.0",
     "@11ty/eleventy-plugin-syntaxhighlight": "^3.1.3",
-    "eleventy": "^1.0.6",
+    "debug": "^4.3.3",
     "js-yaml": "^4.1.0",
     "lodash.chunk": "^4.2.0",
     "moment": "^2.29.1",
