--- a/package.json
+++ b/package.json
@@ -1,12 +1,9 @@
 {
-  "dependencies": {
-    "@11ty/eleventy": "^1.0.0",
-    "@11ty/eleventy-plugin-syntaxhighlight": "^3.1.3",
-    "debug": "^4.3.3",
-    "js-yaml": "^4.1.0",
-    "lodash.chunk": "^4.2.0",
-    "moment": "^2.29.1",
-    "sass": "^1.43.4"
+  "name": "georgejkaye.github.io",
+  "version": "2.0.0",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/georgejkaye/georgejkaye.github.io"
   },
   "scripts": {
     "watch:eleventy": "npx @11ty/eleventy --serve",
@@ -14,5 +11,14 @@
     "start": "npm run watch:eleventy & npm run watch:sass",
     "build:eleventy": "npx @11ty/eleventy",
     "build:sass": "npx sass sass:build/css"
-  }
+  },
+  "dependencies": {
+    "@11ty/eleventy": "^1.0.0",
+    "@11ty/eleventy-plugin-syntaxhighlight": "^3.1.3",
+    "js-yaml": "^4.1.0",
+    "lodash.chunk": "^4.2.0",
+    "moment": "^2.29.1",
+    "sass": "^1.43.4"
+  },
+  "license": "GPL-3.0-or-later"
 }
