--- a/src/data/people.yml
+++ b/src/data/people.yml
@@ -43,3 +43,7 @@ amar:
   name: Amar Hadzihasanovic
   poss: "'s"
   web: https://ioc.ee/~amar/
+david:
+  name: David Sprunger
+  poss: "'s"
+  web: https://davidsprunger.com/
