--- a/src/data/news.yml
+++ b/src/data/news.yml
@@ -2,3 +2,5 @@
   text: Attended <a href="https://www.cl.cam.ac.uk/events/syco/8/">SYCO 8</a> in Tallinn and gave a talk on '<a href="/files/slides/2021-12-13-syco8.pdf">Normalisation by evaluation for digital circuits</a>'.
 - date: 2021-12-10
   text: After many months of wrestling with Contensis, we finally managed to get the first batch of Birmingham computer science PhD students profiles on the university website! Thanks must also go to <a href="https://www.cs.bham.ac.uk/~txd880/">Tom de Jong</a> who helped me proofread them all. You can see the list at <a href="https://www.birmingham.ac.uk/schools/computer-science/people/research-students.aspx">https://www.birmingham.ac.uk/schools/computer-science/people/research-students.aspx</a>.
+- date: 2022-01-26
+  text: Put a new preprint on the arxiv, <a href="https://arxiv.org/abs/2201.10456">'Full abstraction for digital circuits'</a>!
