Fix tile hile station crs

--- a/src/data/stations.yml
+++ b/src/data/stations.yml
@@ -143,7 +143,7 @@
 - name: The Lakes
   crs: tlk
 - name: Tile Hill
-  crs: tlh
+  crs: thl
 - name: Tottenham Hale
   crs: tom
 - name: Tulse Hill
