Add theories of computation to teaching

--- a/src/data/teaching.yml
+++ b/src/data/teaching.yml
@@ -1,3 +1,8 @@
+- title: Theories of Computation
+  web: https://www.cs.bham.ac.uk/internal/modules/2021/06-35393/
+  term: Spring 2022
+  role: Teaching assistant
+  institution: University of Birmingham
 - title: Mathematical and Logical Foundations of Computer Science
   web: https://www.cs.bham.ac.uk/internal/modules/2021/06-35324/
   term: Autumn 2021
