--- a/src/posts/research/circuits/circuits.yml
+++ b/src/posts/research/circuits/circuits.yml
@@ -1,4 +1,4 @@
 tags: 
   - circuits
-series: Full abstraction for digital circuits
+series: Full abstraction <br> for digital circuits
 dir: research/circuits
