Add theory seminar line

--- a/src/data/people.yml
+++ b/src/data/people.yml
@@ -23,6 +23,10 @@ todd:
   name: Todd Waugh Ambridge
   poss: "'s"
   web: http://www.cs.bham.ac.uk/~txw467
+tdj:
+  name: Tom de Jong
+  poss: "'s"
+  web: http://www.cs.bham.ac.uk/~txd880
 calin:
   name: Calin Tataru
   poss: "'s"
