--- a/src/data/people.yml
+++ b/src/data/people.yml
@@ -1,7 +1,9 @@
 me:
   name: George Kaye
   address: Office 244 (Desk J), School of Computer Science, University of Birmingham
-  email: g.j.kaye at cs.bham.ac.uk
+  email:
+    uni: g.j.kaye at cs.bham.ac.uk
+    personal: george at georgejkaye.com
   picture: /images/me/me-3.webp
 noam:
   name: Noam Zeilberger
