--- a/.github/workflows/eleventy.yml
+++ b/.github/workflows/eleventy.yml
@@ -10,6 +10,8 @@ jobs:
     steps:
       - name: Checkout repo
         uses: actions/checkout@v2
+        with:
+          submodules: recursive
       - name: Set up node
         uses: actions/setup-node@v2
         with:
