Update tikz figure names

--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "watch:eleventy": "npx @11ty/eleventy --serve",
     "watch:sass": "npx sass sass:build/css --watch",
     "watch:tikz": "python figures/convert.py figures build --watch",
-    "start": "yarn run watch:eleventy & yarn run watch:sass & yarn run watch:tikz",
+    "start": "yarn run watch:eleventy & yarn run watch:sass",
     "build:eleventy": "npx @11ty/eleventy",
     "build:sass": "npx sass sass:build/css",
-    "build:tikz": "python figures/convert.py figures build",
+    "build:tikz": "python figures/convert.py figures build build/figures figures/blog.tikzstyles",
     "build": "yarn build:eleventy && yarn build:sass && yarn build:tikz"
   },
   "dependencies": {
