Refactor some liquid templates into markdown

--- a/src/data/people.yml
+++ b/src/data/people.yml
@@ -1,6 +1,6 @@
 me:
   name: George Kaye
-  address: Office 244 (Desk J), School of Computer Science, University of Birmingham
+  address: Office 218 (Desk H), School of Computer Science, University of Birmingham
   email:
     uni: g.j.kaye at cs.bham.ac.uk
     personal: george at georgejkaye.com
