--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
   "dependencies": {
     "@11ty/eleventy": "^1.0.0",
     "@11ty/eleventy-plugin-syntaxhighlight": "^3.1.3",
+    "@iktakahiro/markdown-it-katex": "^4.0.1",
     "js-yaml": "^4.1.0",
     "lodash.chunk": "^4.2.0",
-    "moment": "^2.29.2",
+    "markdown-it-attrs": "^4.1.4",
+    "moment": "^2.29.3",
+    "outdent": "^0.8.0",
     "sass": "^1.43.4"
   },
   "license": "GPL-3.0-or-later"
