--- a/src/data/visits.yml
+++ b/src/data/visits.yml
@@ -1,3 +1,7 @@
+- venue: MGS 2022
+  web: https://www.cs.nott.ac.uk/~psznk/events/mgs22.html
+  city: Nottingham
+  dates: April 10-14, 2022
 - venue: SYCO 8
   web: https://www.cl.cam.ac.uk/events/syco/8/
   city: Tallinn
