--- a/src/data/talks.yml
+++ b/src/data/talks.yml
@@ -1,3 +1,13 @@
+- title: Fully abstract categorical semantics for digital circuits
+  venue: ACT 2022
+  web: https://msp.cis.strath.ac.uk/act2022/
+  date: 2022-07-18
+  key: act2022
+  links:
+    abstract: true
+    slides: false
+    github: true
+  repo: 
 - title: Normalisation by Evaluation for Digital Circuits
   venue: SYCO 8
   web: https://www.cl.cam.ac.uk/events/syco/8/
@@ -7,7 +17,6 @@
     slides: true
     abstract: true
     github: true
-  repo: https://github.com/georgejkaye/syco8
 - title: Rewriting Graphically with Cartesian Traced Categories
   venue: ACT 2021
   web: https://www.cl.cam.ac.uk/events/act2021/
