Update act 2022 talk date

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,17 @@
 build/
+.vscode/
 node_modules/
+
 .sass-cache
 .jekyll-metadata
 .jekyll-cache
 .metals
-.vscode/
 _site/
 *.css*
+
+./*pdf
+*synctex.gz
+*fls
+*log
+*fdb_latexmk
+*aux
