--- a/src/data/news.yml
+++ b/src/data/news.yml
@@ -1,3 +1,5 @@
+- date: 2022-06-08
+  text: Will be speaking at <a href="https://msp.cis.strath.ac.uk/act2022/">ACT 2022</a> about 'Fully abstract categorical semantics for digital circuits'!
 - date: 2022-01-26
   text: Put a new preprint on the arxiv, <a href="https://arxiv.org/abs/2201.10456">'Full abstraction for digital circuits'</a>!
 - date: 2021-12-13
