--- a/src/data/pictures.yml
+++ b/src/data/pictures.yml
@@ -1,3 +1,6 @@
+- caption: The conference photo for ACT 2022, taken outside the McCance building.
+  alt: The attendants of ACT 2022 stand in a garden, with some of them spilling out of the frame.
+  src: me/act2022.webp
 - caption: The conference photo for SYCO 8, taken on the steps of the conference venue, the Opetajata Maja (Teacher's House).
   alt: The attendants of SYCO 8 stand on the steps in front of a pale yellow building, with a copper green canopy above them.
   src: me/syco8.webp  
